# backend/src/BoilerPlate.App.API/Swagger/swagger.json
@@ -1,11 +1,11 @@
 {
   "openapi": "3.0.1",
   "info": {
-    "title": "BoilerPlate.App.API, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null",
-    "version": "1.0"
+    "title": "API",
+    "version": "v1"
   },
   "paths": {
-    "/api/auth": {
+    "/api/v1/auth": {
       "post": {
         "tags": [
           "Authentication"
@@ -59,7 +59,7 @@
         }
       }
     },
-    "/api/auth/refresh": {
+    "/api/v1/auth/refresh": {
       "post": {
         "tags": [
           "Authentication"
@@ -113,7 +113,7 @@
         }
       }
     },
-    "/api/file-storage/{id}": {
+    "/api/v1/file-storage/{id}": {
       "get": {
         "tags": [
           "FileStorage"
@@ -242,7 +242,7 @@
         }
       }
     },
-    "/api/file-storage": {
+    "/api/v1/file-storage": {
       "get": {
         "tags": [
           "FileStorage"
@@ -356,7 +356,7 @@
         }
       }
     },
-    "/api/tests/enqueue-job": {
+    "/api/v1/tests/enqueue-job": {
       "post": {
         "tags": [
           "Tests"
@@ -410,7 +410,7 @@
         }
       }
     },
-    "/api/tests/kafka-produce": {
+    "/api/v1/tests/kafka-produce": {
       "post": {
         "tags": [
           "Tests"
@@ -447,7 +447,7 @@
         }
       }
     },
-    "/api/users/{id}": {
+    "/api/v1/users/{id}": {
       "get": {
         "tags": [
           "Users"
@@ -489,7 +489,7 @@
         }
       }
     },
-    "/api/users/current": {
+    "/api/v1/users/current": {
       "get": {
         "tags": [
           "Users"
@@ -519,7 +519,7 @@
         }
       }
     },
-    "/api/users": {
+    "/api/v1/users": {
       "get": {
         "tags": [
           "Users"
@@ -585,7 +585,7 @@
         }
       }
     },
-    "/api/users/register": {
+    "/api/v1/users/register": {
       "post": {
         "tags": [
           "Users"
@@ -639,7 +639,7 @@
         }
       }
     },
-    "/api/users/log-out": {
+    "/api/v1/users/log-out": {
       "post": {
         "tags": [
           "Users"
@@ -652,7 +652,7 @@
         }
       }
     },
-    "/api/users/password": {
+    "/api/v1/users/password": {
       "put": {
         "tags": [
           "Users"
